--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,20 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(bcnp_core
+set(BCNP_CORE_SOURCES
     src/bcnp/packet.cpp
     src/bcnp/command_queue.cpp
     src/bcnp/stream_parser.cpp
     src/bcnp/controller.cpp
-    src/bcnp/transport/controller_driver.cpp
-    src/bcnp/transport/udp_posix.cpp)
+    src/bcnp/transport/controller_driver.cpp)
+
+if(UNIX)
+    list(APPEND BCNP_CORE_SOURCES src/bcnp/transport/udp_posix.cpp)
+else()
+    message(STATUS "Skipping POSIX UDP adapter on non-UNIX platform")
+endif()
+
+add_library(bcnp_core ${BCNP_CORE_SOURCES})
 
 target_include_directories(bcnp_core PUBLIC src)
 
